[gd_scene load_steps=17 format=2]

[ext_resource path="res://scripts/HomeScreen.gd" type="Script" id=1]
[ext_resource path="res://scenes/UI.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/Network.gd" type="Script" id=3]
[ext_resource path="res://graphic/ButtonPlay.png" type="Texture" id=4]
[ext_resource path="res://graphic/ButtonShop.png" type="Texture" id=5]
[ext_resource path="res://graphic/ButtonPlayHover.png" type="Texture" id=6]
[ext_resource path="res://graphic/ButtonPlayPressed.png" type="Texture" id=7]
[ext_resource path="res://graphic/ButtonShopHover.png" type="Texture" id=8]
[ext_resource path="res://graphic/ButtonShopPressed.png" type="Texture" id=9]
[ext_resource path="res://graphic/ButtonQuit.png" type="Texture" id=10]
[ext_resource path="res://graphic/ButtonQuitHover.png" type="Texture" id=11]
[ext_resource path="res://graphic/ButtonQuitPress.png" type="Texture" id=12]
[ext_resource path="res://graphic/BackgroundMenu.png" type="Texture" id=13]
[ext_resource path="res://graphic/cosmicclash.png" type="Texture" id=14]
[ext_resource path="res://Audio/click-button-140881.wav" type="AudioStream" id=15]
[ext_resource path="res://graphic/Black.png" type="Texture" id=16]

[node name="HomeScreen" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 352, 216 )
texture = ExtResource( 13 )

[node name="Play" type="TextureButton" parent="."]
anchor_left = 0.376471
anchor_top = 0.444444
anchor_right = 0.611765
anchor_bottom = 0.555556
margin_right = -3.05176e-05
margin_bottom = -3.05176e-05
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Shop" type="TextureButton" parent="."]
anchor_left = 0.376471
anchor_top = 0.622222
anchor_right = 0.611765
anchor_bottom = 0.733333
margin_top = -3.05176e-05
margin_right = -3.05176e-05
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Quit" type="TextureButton" parent="."]
anchor_left = 0.376471
anchor_top = 0.8
anchor_right = 0.611765
anchor_bottom = 0.911111
margin_right = -3.05176e-05
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="UI" parent="." instance=ExtResource( 2 )]
anchor_left = 0.0117647
anchor_top = 0.0111111
anchor_right = 1.01176
anchor_bottom = 0.122222
margin_right = -6.10352e-05
margin_bottom = 0.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )

[node name="Cosmicclash" type="Sprite" parent="."]
position = Vector2( 336, 192 )
texture = ExtResource( 14 )

[node name="ClickSFX1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 15 )

[node name="ClickSFX2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 15 )

[node name="ClickSFX3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 15 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 340, 360 )
current = true

[node name="Border1" type="Sprite" parent="."]
position = Vector2( -2249, 288.5 )
scale = Vector2( 8.78125, 7.68164 )
texture = ExtResource( 16 )

[node name="Border2" type="Sprite" parent="."]
position = Vector2( 341.5, 2686 )
scale = Vector2( 18.8926, 7.68164 )
texture = ExtResource( 16 )

[node name="Border3" type="Sprite" parent="."]
position = Vector2( 2930.5, -391.5 )
scale = Vector2( 8.7832, 5.02539 )
texture = ExtResource( 16 )

[node name="Border4" type="Sprite" parent="."]
position = Vector2( 403, -839.5 )
scale = Vector2( 2.08984, 3.27539 )
texture = ExtResource( 16 )

[connection signal="pressed" from="Play" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="Shop" to="." method="_on_Shop_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
[connection signal="finished" from="ClickSFX1" to="." method="_on_ClickSFX_finished"]
[connection signal="finished" from="ClickSFX1" to="." method="_on_ClickSFX1_finished"]
[connection signal="finished" from="ClickSFX2" to="." method="_on_ClickSFX_finished"]
[connection signal="finished" from="ClickSFX2" to="." method="_on_ClickSFX2_finished"]
[connection signal="finished" from="ClickSFX3" to="." method="_on_ClickSFX_finished"]
[connection signal="finished" from="ClickSFX3" to="." method="_on_ClickSFX3_finished"]
